--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -158,6 +158,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from run_pretrained_unet_inference import download_model\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading state_dict: 100%|██████████| 1.99G/1.99G [03:36<00:00, 9.18MiB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "UNET_FOLDER = \"https://dl.fbaipublicfiles.com/fastMRI/trained_models/unet/\"\n",
+    "model = \"knee_sc_leaderboard_state_dict.pt\"\n",
+    "\n",
+    "folder = \"./models/pretrained\"\n",
+    "path = f\"{folder}/{model}\"\n",
+    "\n",
+    "if not os.path.exists(folder):\n",
+    "    os.makedirs(folder)\n",
+    "\n",
+    "download_model(UNET_FOLDER + model, path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
