--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -96,14 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(33, 640, 372)\n",
+      "(40, 640, 322)\n",
       "complex64\n"
      ]
     }
@@ -113,6 +113,13 @@
     "print(volume_kspace.shape)\n",
     "print(volume_kspace.dtype)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -326,6 +333,46 @@
     "slice_kspace_t = T.to_tensor(slice_kspace)\n",
     "slice_image = fastmri.ifft2c(slice_kspace_t)\n",
     "slice_image_abs = fastmri.complex_abs(slice_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.float32"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slice_image.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.float32"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slice_image_abs.dtype"
    ]
   },
   {
