--- a/model.ipynb
+++ b/model.ipynb
@@ -19,7 +19,7 @@
     "from src.subsample import create_mask_for_mask_type, RandomMaskFunc\n",
     "from src import transforms as T\n",
     "from src.mri_data import fetch_dir\n",
-    "from src.data_module import FastMriDataModule\n",
+    "from src.data_module import FastMriDataModule, AnnotatedSliceDataset\n",
     "from src.unet.unet_module import UnetModule\n",
     "from argparse import ArgumentParser\n",
     "\n"
@@ -141,43 +141,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trainer.device_ids"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "torch.float32"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading annotations: 918kiB [00:00, 149MiB/s]                   \n"
+     ]
     }
    ],
    "source": [
-    "model.dtype"
+    "# take one sample from data_module\n",
+    "#data_module.setup()\n",
+    "sample = next(iter(data_module.val_dataloader()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'FastMriDataModule' object has no attribute 'AnnotatedSliceDataset'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m dataset \u001b[38;5;241m=\u001b[39m \u001b[43mdata_module\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mAnnotatedSliceDataset\u001b[49m(\n\u001b[1;32m      2\u001b[0m     root\u001b[38;5;241m=\u001b[39mconfigs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata_path\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m      3\u001b[0m     transform\u001b[38;5;241m=\u001b[39mval_transform,\n\u001b[1;32m      4\u001b[0m     sample_rate\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\n\u001b[1;32m      5\u001b[0m     volume_sample_rate\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\n\u001b[1;32m      6\u001b[0m     challenge\u001b[38;5;241m=\u001b[39mconfigs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchallenge\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m      7\u001b[0m     use_dataset_cache\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[1;32m      8\u001b[0m     raw_sample_filter\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m      9\u001b[0m     subsplit\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mknee\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     10\u001b[0m     multiple_annotation_policy\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mall\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     11\u001b[0m )\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'FastMriDataModule' object has no attribute 'AnnotatedSliceDataset'"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = data_module.AnnotatedSliceDataset(\n",
+    "    root=configs['data_path'],\n",
+    "    transform=val_transform,\n",
+    "    sample_rate=1,\n",
+    "    volume_sample_rate=1,\n",
+    "    challenge=configs['challenge'],\n",
+    "    use_dataset_cache=False,\n",
+    "    raw_sample_filter=None,\n",
+    "    subsplit='knee',\n",
+    "    multiple_annotation_policy='all',\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
