--- a/model.ipynb
+++ b/model.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -38,9 +38,7 @@
       "GPU available: True (mps), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "/Users/lsantos/Projects/fastMRI/.venv/lib/python3.10/site-packages/pytorch_lightning/trainer/connectors/logger_connector/logger_connector.py:67: UserWarning: Starting from v1.9.0, `tensorboardX` has been removed as a dependency of the `pytorch_lightning` package, due to potential conflicts with other packages in the ML ecosystem. For this reason, `logger=True` will use `CSVLogger` as the default logger, unless the `tensorboard` or `tensorboardX` packages are found. Please `pip install lightning[extra]` or one of them to enable TensorBoard support by default\n",
-      "  warning_cache.warn(\n"
+      "HPU available: False, using: 0 HPUs\n"
      ]
     }
    ],
@@ -141,17 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading annotations: 918kiB [00:00, 149MiB/s]                   \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# take one sample from data_module\n",
     "#data_module.setup()\n",
@@ -160,27 +150,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'FastMriDataModule' object has no attribute 'AnnotatedSliceDataset'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m dataset \u001b[38;5;241m=\u001b[39m \u001b[43mdata_module\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mAnnotatedSliceDataset\u001b[49m(\n\u001b[1;32m      2\u001b[0m     root\u001b[38;5;241m=\u001b[39mconfigs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata_path\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m      3\u001b[0m     transform\u001b[38;5;241m=\u001b[39mval_transform,\n\u001b[1;32m      4\u001b[0m     sample_rate\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\n\u001b[1;32m      5\u001b[0m     volume_sample_rate\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\n\u001b[1;32m      6\u001b[0m     challenge\u001b[38;5;241m=\u001b[39mconfigs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchallenge\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m      7\u001b[0m     use_dataset_cache\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[1;32m      8\u001b[0m     raw_sample_filter\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m      9\u001b[0m     subsplit\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mknee\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     10\u001b[0m     multiple_annotation_policy\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mall\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     11\u001b[0m )\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'FastMriDataModule' object has no attribute 'AnnotatedSliceDataset'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'fname': [''],\n",
+       " 'slice': [''],\n",
+       " 'study_level': [''],\n",
+       " 'x': tensor([-1]),\n",
+       " 'y': tensor([-1]),\n",
+       " 'width': tensor([-1]),\n",
+       " 'height': tensor([-1]),\n",
+       " 'label': ['']}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset = data_module.AnnotatedSliceDataset(\n",
-    "    root=configs['data_path'],\n",
+    "sample.annotation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = fetch_dir(\"knee_path\", path_config) / f\"{configs['challenge']}_train\"\n",
+    "dataset = AnnotatedSliceDataset(\n",
+    "    root=data_path,\n",
     "    transform=val_transform,\n",
-    "    sample_rate=1,\n",
-    "    volume_sample_rate=1,\n",
     "    challenge=configs['challenge'],\n",
     "    use_dataset_cache=False,\n",
     "    raw_sample_filter=None,\n",
@@ -191,29 +195,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = dataset[0]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = dataset.__getitem__(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataLoader' object has no attribute 'to'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdata_module\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mval_dataloader\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m(device)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataLoader' object has no attribute 'to'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'fname': 'file1000001',\n",
+       " 'slice': 15,\n",
+       " 'study_level': 'No',\n",
+       " 'x': 117,\n",
+       " 'y': 146,\n",
+       " 'width': 20,\n",
+       " 'height': 12,\n",
+       " 'label': 'Bone- Subchondral edema'}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "a.annotation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "src.mri_data.AnnotatedSliceDataset"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(dataset)"
+   ]
   },
   {
    "cell_type": "code",
