--- a/model.ipynb
+++ b/model.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,9 @@
       "GPU available: True (mps), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n"
+      "HPU available: False, using: 0 HPUs\n",
+      "/Users/abaraldo/Documents/GitHub/fastMRI/venv/lib/python3.10/site-packages/pytorch_lightning/trainer/connectors/logger_connector/logger_connector.py:67: UserWarning: Starting from v1.9.0, `tensorboardX` has been removed as a dependency of the `pytorch_lightning` package, due to potential conflicts with other packages in the ML ecosystem. For this reason, `logger=True` will use `CSVLogger` as the default logger, unless the `tensorboard` or `tensorboardX` packages are found. Please `pip install lightning[extra]` or one of them to enable TensorBoard support by default\n",
+      "  warning_cache.warn(\n"
      ]
     }
    ],
@@ -66,7 +68,8 @@
     "    lr_step_size=40,\n",
     "    lr_gamma=0.1,\n",
     "    weight_decay=0.0,\n",
-    "    max_epochs=50\n",
+    "    max_epochs=50,\n",
+    "    roi_weight=0.1\n",
     ")\n",
     "\n",
     "pl.seed_everything(42)\n",
@@ -106,6 +109,7 @@
     "    lr_step_size=configs['lr_step_size'],\n",
     "    lr_gamma=configs['lr_gamma'],\n",
     "    weight_decay=configs['weight_decay'],\n",
+    "    roi_weight=configs['roi_weight']\n",
     ")\n",
     "\n",
     "callbacks = [\n",
@@ -130,7 +134,6 @@
     ")\n",
     "\n",
     "\n",
-    "\n",
     "#if args.resume_from_checkpoint is None:\n",
     "#    ckpt_list = sorted(checkpoint_dir.glob(\"*.ckpt\"), key=os.path.getmtime)\n",
     "  #  if ckpt_list:\n",
@@ -139,7 +142,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/abaraldo/Documents/GitHub/fastMRI/venv/lib/python3.10/site-packages/pytorch_lightning/trainer/call.py:48: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
+      "  rank_zero_warn(\"Detected KeyboardInterrupt, attempting graceful shutdown...\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "trainer.fit(model, datamodule=data_module)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +201,7 @@
        " 'label': ['']}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,9 +212,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cpu')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample.annotation['x'].device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "shape = sample.target.shape\n",
+    "annotation = {'fname': 'file1000001',\n",
+    "    'slice': 15,\n",
+    "    'study_level': 'No',\n",
+    "    'x': 117,\n",
+    "    'y': 146,\n",
+    "    'width': 20,\n",
+    "    'height': 12,\n",
+    "    'label': 'Bone- Subchondral edema'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = torch.ones(shape)\n",
+    "x, y, w, h = annotation['x'], annotation['y'], annotation['width'], annotation['height']\n",
+    "if x >= 0 and y >= 0 and w > 0 and h > 0:\n",
+    "    mask[..., y:y+h, x:x+w] = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "         [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "         [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "         ...,\n",
+       "         [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "         [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "         [1., 1., 1.,  ..., 1., 1., 1.]]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(146, 158, 117, 137)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(y, y+h, x, x+w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'AnnotatedSliceDataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m data_path \u001b[38;5;241m=\u001b[39m fetch_dir(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mknee_path\u001b[39m\u001b[38;5;124m\"\u001b[39m, path_config) \u001b[38;5;241m/\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconfigs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchallenge\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_train\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m dataset \u001b[38;5;241m=\u001b[39m \u001b[43mAnnotatedSliceDataset\u001b[49m(\n\u001b[1;32m      3\u001b[0m     root\u001b[38;5;241m=\u001b[39mdata_path,\n\u001b[1;32m      4\u001b[0m     transform\u001b[38;5;241m=\u001b[39mval_transform,\n\u001b[1;32m      5\u001b[0m     challenge\u001b[38;5;241m=\u001b[39mconfigs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchallenge\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m      6\u001b[0m     use_dataset_cache\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[1;32m      7\u001b[0m     raw_sample_filter\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m      8\u001b[0m     subsplit\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mknee\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      9\u001b[0m     multiple_annotation_policy\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mall\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     10\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'AnnotatedSliceDataset' is not defined"
+     ]
+    }
+   ],
    "source": [
     "data_path = fetch_dir(\"knee_path\", path_config) / f\"{configs['challenge']}_train\"\n",
     "dataset = AnnotatedSliceDataset(\n",
