Using tensorboard as monitor to fix the add_image bug

--- a/model.ipynb
+++ b/model.ipynb
@@ -22,7 +22,9 @@
     "from src.data_module import FastMriDataModule, AnnotatedSliceDataset\n",
     "from src.unet.unet_module import UnetModule\n",
     "from argparse import ArgumentParser\n",
-    "\n"
+    "\n",
+    "from pytorch_lightning import loggers as pl_loggers\n",
+    "tensorboard = pl_loggers.TensorBoardLogger('./')"
    ]
   },
   {
@@ -38,9 +40,7 @@
       "GPU available: True (mps), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "/Users/abaraldo/Documents/GitHub/fastMRI/venv/lib/python3.10/site-packages/pytorch_lightning/trainer/connectors/logger_connector/logger_connector.py:67: UserWarning: Starting from v1.9.0, `tensorboardX` has been removed as a dependency of the `pytorch_lightning` package, due to potential conflicts with other packages in the ML ecosystem. For this reason, `logger=True` will use `CSVLogger` as the default logger, unless the `tensorboard` or `tensorboardX` packages are found. Please `pip install lightning[extra]` or one of them to enable TensorBoard support by default\n",
-      "  warning_cache.warn(\n"
+      "HPU available: False, using: 0 HPUs\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
     "    lr_gamma=0.1,\n",
     "    weight_decay=0.0,\n",
     "    max_epochs=50,\n",
-    "    roi_weight=0.1\n",
+    "    roi_weight=0.2\n",
     ")\n",
     "\n",
     "pl.seed_everything(42)\n",
@@ -80,9 +80,7 @@
     ")\n",
     "\n",
     "# random masks for train, fixed masks for val\n",
-    "train_transform = T.UnetDataTransform(configs['challenge'],\n",
-    "                                      mask_func=mask,\n",
-    "                                      use_seed=False)\n",
+    "train_transform = T.UnetDataTransform(configs['challenge'], mask_func=mask, use_seed=False)\n",
     "val_transform = T.UnetDataTransform(configs['challenge'], mask_func=mask)\n",
     "test_transform = T.UnetDataTransform(configs['challenge'])\n",
     "\n",
@@ -95,7 +93,7 @@
     "    test_transform=test_transform,\n",
     "    test_path=None,\n",
     "    batch_size=configs['batch_size'],\n",
-    "    num_workers=4,\n",
+    "    num_workers=10,\n",
     ")\n",
     "\n",
     "# create a model\n",
@@ -115,7 +113,8 @@
     "callbacks = [\n",
     "    pl.callbacks.ModelCheckpoint(\n",
     "        dirpath=configs['default_root_dir'],\n",
-    "        monitor=\"val_loss\",\n",
+    "        # monitor=\"val_loss\",\n",
+    "        monitor=\"validation_loss\",\n",
     "        mode=\"min\",\n",
     "        save_top_k=1,\n",
     "        save_last=True,\n",
@@ -131,8 +130,8 @@
     "    default_root_dir=configs['default_root_dir'],\n",
     "    accelerator=configs['backend'],\n",
     "    callbacks=callbacks,\n",
+    "    logger=tensorboard\n",
     ")\n",
-    "\n",
     "\n",
     "#if args.resume_from_checkpoint is None:\n",
     "#    ckpt_list = sorted(checkpoint_dir.glob(\"*.ckpt\"), key=os.path.getmtime)\n",
@@ -141,22 +140,218 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the line of code to follow the training process of the model. The training process will be displayed in the TensorBoard:\n",
+    "tensorboard --logdir ./lightning_logs"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/abaraldo/Documents/GitHub/fastMRI/venv/lib/python3.10/site-packages/pytorch_lightning/trainer/call.py:48: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
-      "  rank_zero_warn(\"Detected KeyboardInterrupt, attempting graceful shutdown...\")\n"
+      "/Users/abaraldo/Documents/GitHub/fastMRI/venv/lib/python3.10/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:612: UserWarning: Checkpoint directory logs/unet/unet_demo exists and is not empty.\n",
+      "  rank_zero_warn(f\"Checkpoint directory {dirpath} exists and is not empty.\")\n",
+      "\n",
+      "  | Name             | Type                 | Params\n",
+      "----------------------------------------------------------\n",
+      "0 | NMSE             | DistributedMetricSum | 0     \n",
+      "1 | SSIM             | DistributedMetricSum | 0     \n",
+      "2 | PSNR             | DistributedMetricSum | 0     \n",
+      "3 | ValLoss          | DistributedMetricSum | 0     \n",
+      "4 | TotExamples      | DistributedMetricSum | 0     \n",
+      "5 | TotSliceExamples | DistributedMetricSum | 0     \n",
+      "6 | unet             | Unet                 | 7.8 M \n",
+      "7 | ssim             | SSIM                 | 0     \n",
+      "----------------------------------------------------------\n",
+      "7.8 M     Trainable params\n",
+      "0         Non-trainable params\n",
+      "7.8 M     Total params\n",
+      "31.024    Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0:  54%|█████▍    | 215/400 [00:58<00:49,  3.70it/s, loss=0.658, v_num=1]---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "Epoch 0:  57%|█████▊    | 230/400 [00:58<00:43,  3.91it/s, loss=0.658, v_num=1]---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "Epoch 0:  61%|██████▏   | 245/400 [00:59<00:37,  4.13it/s, loss=0.658, v_num=1]---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "Epoch 0:  66%|██████▋   | 266/400 [01:00<00:30,  4.42it/s, loss=0.658, v_num=1]---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "Epoch 0:  67%|██████▋   | 269/400 [01:00<00:29,  4.45it/s, loss=0.658, v_num=1]---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "Epoch 0:  70%|██████▉   | 278/400 [01:00<00:26,  4.56it/s, loss=0.658, v_num=1]---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "Epoch 0:  74%|███████▍  | 295/400 [01:01<00:21,  4.79it/s, loss=0.658, v_num=1]---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "Epoch 0:  79%|███████▉  | 315/400 [01:02<00:16,  5.04it/s, loss=0.658, v_num=1]---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "Epoch 0:  82%|████████▏ | 328/400 [01:02<00:13,  5.21it/s, loss=0.658, v_num=1]---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "Epoch 0:  90%|████████▉ | 358/400 [01:04<00:07,  5.58it/s, loss=0.658, v_num=1]---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "Epoch 0:  91%|█████████▏| 365/400 [01:04<00:06,  5.66it/s, loss=0.658, v_num=1]---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "Epoch 0:  92%|█████████▎| 370/400 [01:04<00:05,  5.71it/s, loss=0.658, v_num=1]---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "Epoch 0:  94%|█████████▎| 374/400 [01:05<00:04,  5.75it/s, loss=0.658, v_num=1]---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "Epoch 0:  94%|█████████▍| 377/400 [01:05<00:03,  5.77it/s, loss=0.658, v_num=1]---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "Epoch 0:  96%|█████████▌| 382/400 [01:05<00:03,  5.82it/s, loss=0.658, v_num=1]---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "Epoch 0:  96%|█████████▋| 386/400 [01:05<00:02,  5.86it/s, loss=0.658, v_num=1]---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "---------------------------\n",
+      "log_image\n",
+      "---------------------------\n",
+      "Epoch 0: 100%|██████████| 400/400 [01:06<00:00,  6.01it/s, loss=0.658, v_num=1, validation_loss=0.719]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, global step 200: 'validation_loss' reached 0.71923 (best 0.71923), saving model to 'logs/unet/unet_demo/epoch=0-step=200-v1.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1:  36%|███▌      | 143/400 [01:07<02:00,  2.13it/s, loss=0.606, v_num=1, validation_loss=0.719]"
      ]
     }
    ],
    "source": [
     "trainer.fit(model, datamodule=data_module)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
