Adding Convolutional Block Attention Module
You can pass an arg (attn_layer = True) to add the CBAM (composed by Spatial Attention and Channel Attention) inside the Unet

--- a/model.ipynb
+++ b/model.ipynb
@@ -61,7 +61,8 @@
     "    # model parameters\n",
     "    in_chans=1,\n",
     "    out_chans=1,\n",
-    "    chans=32,\n",
+    "    chans=64,\n",
+    "    # chans=256,\n",
     "    num_pool_layers=4,\n",
     "    drop_prob=0.0,\n",
     "    lr=0.001,\n",
@@ -69,7 +70,8 @@
     "    lr_gamma=0.1,\n",
     "    weight_decay=0.0,\n",
     "    max_epochs=50,\n",
-    "    roi_weight=0.2\n",
+    "    roi_weight=0.2,\n",
+    "    attn_layer=True,\n",
     ")\n",
     "\n",
     "pl.seed_everything(42)\n",
@@ -107,7 +109,8 @@
     "    lr_step_size=configs['lr_step_size'],\n",
     "    lr_gamma=configs['lr_gamma'],\n",
     "    weight_decay=configs['weight_decay'],\n",
-    "    roi_weight=configs['roi_weight']\n",
+    "    roi_weight=configs['roi_weight'],\n",
+    "    attn_layer=configs['attn_layer'],\n",
     ")\n",
     "\n",
     "callbacks = [\n",
@@ -130,7 +133,7 @@
     "    default_root_dir=configs['default_root_dir'],\n",
     "    accelerator=configs['backend'],\n",
     "    callbacks=callbacks,\n",
-    "    logger=tensorboard\n",
+    "    logger=tensorboard,\n",
     ")\n",
     "\n",
     "#if args.resume_from_checkpoint is None:\n",
@@ -144,6 +147,7 @@
    "metadata": {},
    "source": [
     "Run the line of code to follow the training process of the model. The training process will be displayed in the TensorBoard:\n",
+    "\n",
     "tensorboard --logdir ./lightning_logs"
    ]
   },
@@ -167,184 +171,99 @@
       "3 | ValLoss          | DistributedMetricSum | 0     \n",
       "4 | TotExamples      | DistributedMetricSum | 0     \n",
       "5 | TotSliceExamples | DistributedMetricSum | 0     \n",
-      "6 | unet             | Unet                 | 7.8 M \n",
+      "6 | unet             | Unet                 | 31.4 M\n",
       "7 | ssim             | SSIM                 | 0     \n",
       "----------------------------------------------------------\n",
-      "7.8 M     Trainable params\n",
+      "31.4 M    Trainable params\n",
       "0         Non-trainable params\n",
-      "7.8 M     Total params\n",
-      "31.024    Total estimated model params size (MB)\n"
+      "31.4 M    Total params\n",
+      "125.493   Total estimated model params size (MB)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0:  54%|█████▍    | 215/400 [00:58<00:49,  3.70it/s, loss=0.658, v_num=1]---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "Epoch 0:  57%|█████▊    | 230/400 [00:58<00:43,  3.91it/s, loss=0.658, v_num=1]---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "Epoch 0:  61%|██████▏   | 245/400 [00:59<00:37,  4.13it/s, loss=0.658, v_num=1]---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "Epoch 0:  66%|██████▋   | 266/400 [01:00<00:30,  4.42it/s, loss=0.658, v_num=1]---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "Epoch 0:  67%|██████▋   | 269/400 [01:00<00:29,  4.45it/s, loss=0.658, v_num=1]---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "Epoch 0:  70%|██████▉   | 278/400 [01:00<00:26,  4.56it/s, loss=0.658, v_num=1]---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "Epoch 0:  74%|███████▍  | 295/400 [01:01<00:21,  4.79it/s, loss=0.658, v_num=1]---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "Epoch 0:  79%|███████▉  | 315/400 [01:02<00:16,  5.04it/s, loss=0.658, v_num=1]---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "Epoch 0:  82%|████████▏ | 328/400 [01:02<00:13,  5.21it/s, loss=0.658, v_num=1]---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "Epoch 0:  90%|████████▉ | 358/400 [01:04<00:07,  5.58it/s, loss=0.658, v_num=1]---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "Epoch 0:  91%|█████████▏| 365/400 [01:04<00:06,  5.66it/s, loss=0.658, v_num=1]---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "Epoch 0:  92%|█████████▎| 370/400 [01:04<00:05,  5.71it/s, loss=0.658, v_num=1]---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "Epoch 0:  94%|█████████▎| 374/400 [01:05<00:04,  5.75it/s, loss=0.658, v_num=1]---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "Epoch 0:  94%|█████████▍| 377/400 [01:05<00:03,  5.77it/s, loss=0.658, v_num=1]---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "Epoch 0:  96%|█████████▌| 382/400 [01:05<00:03,  5.82it/s, loss=0.658, v_num=1]---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "Epoch 0:  96%|█████████▋| 386/400 [01:05<00:02,  5.86it/s, loss=0.658, v_num=1]---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "---------------------------\n",
-      "log_image\n",
-      "---------------------------\n",
-      "Epoch 0: 100%|██████████| 400/400 [01:06<00:00,  6.01it/s, loss=0.658, v_num=1, validation_loss=0.719]"
+      "Epoch 0:   0%|          | 224/48450 [01:45<6:18:12,  2.13it/s, loss=0.646, v_num=1]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 0, global step 200: 'validation_loss' reached 0.71923 (best 0.71923), saving model to 'logs/unet/unet_demo/epoch=0-step=200-v1.ckpt' as top 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1:  36%|███▌      | 143/400 [01:07<02:00,  2.13it/s, loss=0.606, v_num=1, validation_loss=0.719]"
+      "/Users/abaraldo/Documents/GitHub/fastMRI/venv/lib/python3.10/site-packages/pytorch_lightning/trainer/call.py:48: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
+      "  rank_zero_warn(\"Detected KeyboardInterrupt, attempting graceful shutdown...\")\n"
      ]
     }
    ],
    "source": [
     "trainer.fit(model, datamodule=data_module)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ckpt_list = sorted(configs['default_root_dir'].glob(\"*.ckpt\"), key=os.path.getmtime)\n",
+    "if ckpt_list:\n",
+    "    resume_from_checkpoint = str(ckpt_list[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/abaraldo/Documents/GitHub/fastMRI/venv/lib/python3.10/site-packages/pytorch_lightning/trainer/connectors/checkpoint_connector.py:55: LightningDeprecationWarning: Setting `Trainer(resume_from_checkpoint=)` is deprecated in v1.5 and will be removed in v2.0. Please pass `Trainer.fit(ckpt_path=)` directly instead.\n",
+      "  rank_zero_deprecation(\n",
+      "Trainer already configured with model summary callbacks: [<class 'pytorch_lightning.callbacks.model_summary.ModelSummary'>]. Skipping setting a default `ModelSummary` callback.\n",
+      "GPU available: True (mps), used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n"
+     ]
+    }
+   ],
+   "source": [
+    "trainer = pl.Trainer(\n",
+    "    devices=configs['num_gpus'],\n",
+    "    max_epochs=configs['max_epochs'],\n",
+    "    default_root_dir=configs['default_root_dir'],\n",
+    "    accelerator=configs['backend'],\n",
+    "    callbacks=callbacks,\n",
+    "    logger=tensorboard,\n",
+    "    resume_from_checkpoint=resume_from_checkpoint,\n",
+    ")\n",
+    "\n",
+    "trainer.fit(model, datamodule=data_module)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
