Adding metric as a argument to facilitate variations

--- a/model.ipynb
+++ b/model.ipynb
@@ -61,7 +61,7 @@
     "    # model parameters\n",
     "    in_chans=1,\n",
     "    out_chans=1,\n",
-    "    chans=64,\n",
+    "    chans=32,\n",
     "    # chans=256,\n",
     "    num_pool_layers=4,\n",
     "    drop_prob=0.0,\n",
@@ -70,6 +70,7 @@
     "    lr_gamma=0.1,\n",
     "    weight_decay=0.0,\n",
     "    max_epochs=50,\n",
+    "    metric=\"ssim\",\n",
     "    roi_weight=0.2,\n",
     "    attn_layer=True,\n",
     ")\n",
@@ -109,6 +110,7 @@
     "    lr_step_size=configs['lr_step_size'],\n",
     "    lr_gamma=configs['lr_gamma'],\n",
     "    weight_decay=configs['weight_decay'],\n",
+    "    metric=configs['metric'],\n",
     "    roi_weight=configs['roi_weight'],\n",
     "    attn_layer=configs['attn_layer'],\n",
     ")\n",
@@ -171,20 +173,20 @@
       "3 | ValLoss          | DistributedMetricSum | 0     \n",
       "4 | TotExamples      | DistributedMetricSum | 0     \n",
       "5 | TotSliceExamples | DistributedMetricSum | 0     \n",
-      "6 | unet             | Unet                 | 31.4 M\n",
+      "6 | unet             | Unet                 | 7.8 M \n",
       "7 | ssim             | SSIM                 | 0     \n",
       "----------------------------------------------------------\n",
-      "31.4 M    Trainable params\n",
+      "7.8 M     Trainable params\n",
       "0         Non-trainable params\n",
-      "31.4 M    Total params\n",
-      "125.493   Total estimated model params size (MB)\n"
+      "7.8 M     Total params\n",
+      "31.377    Total estimated model params size (MB)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0:   0%|          | 224/48450 [01:45<6:18:12,  2.13it/s, loss=0.646, v_num=1]"
+      "Epoch 0:   1%|          | 319/48450 [01:26<3:37:38,  3.69it/s, loss=0.64, v_num=2] "
      ]
     },
     {
