Adding version name for control and organization

--- a/model.ipynb
+++ b/model.ipynb
@@ -47,13 +47,15 @@
    "source": [
     "path_config = pathlib.Path(\"fastmri_dirs.yaml\")\n",
     "\n",
+    "version_name = \"unet_attn_ssim\" # one of \"unet\", \"unet_attn\", \"unet_ssim\", \"unet_attn_ssim\"\n",
+    "\n",
     "configs = dict(\n",
     "    challenge=\"singlecoil\",\n",
     "    num_gpus=1,\n",
     "    backend=\"mps\",\n",
     "    batch_size=1,\n",
     "    data_path=fetch_dir(\"knee_path\", path_config),\n",
-    "    default_root_dir=fetch_dir(\"log_path\", path_config) / \"unet\" / \"unet_demo\",\n",
+    "    default_root_dir=fetch_dir(\"log_path\", path_config) / \"unet\" / version_name,\n",
     "    mode=\"train\",  # \"train\" or \"test\"\n",
     "    mask_type=\"random\",  # \"random\" or \"equispaced_fraction\"\n",
     "    center_fractions=[0.08],  # number of center lines to use in the mask\n",
@@ -117,7 +119,8 @@
     "\n",
     "callbacks = [\n",
     "    pl.callbacks.ModelCheckpoint(\n",
-    "        dirpath=configs['default_root_dir'],\n",
+    "        # dirpath=configs['default_root_dir'],\n",
+    "        dirpath=configs['default_root_dir'] / \"checkpoints\",\n",
     "        # monitor=\"val_loss\",\n",
     "        monitor=\"validation_loss\",\n",
     "        mode=\"min\",\n",
