--- a/model.ipynb
+++ b/model.ipynb
@@ -49,6 +49,19 @@
     "\n",
     "version_name = \"unet_attn_ssim\" # one of \"unet\", \"unet_attn\", \"unet_ssim\", \"unet_attn_ssim\"\n",
     "\n",
+    "if version_name == \"unet\":\n",
+    "    attn_layer = False\n",
+    "    metric = \"f1\"\n",
+    "elif version_name == \"unet_attn\":\n",
+    "    attn_layer = True\n",
+    "    metric = \"f1\"\n",
+    "elif version_name == \"unet_ssim\":\n",
+    "    attn_layer = False\n",
+    "    metric = \"ssim\"\n",
+    "elif version_name == \"unet_attn_ssim\":\n",
+    "    attn_layer = True\n",
+    "    metric = \"ssim\"\n",
+    "\n",
     "configs = dict(\n",
     "    challenge=\"singlecoil\",\n",
     "    num_gpus=1,\n",
@@ -72,9 +85,9 @@
     "    lr_gamma=0.1,\n",
     "    weight_decay=0.0,\n",
     "    max_epochs=10,\n",
-    "    metric=\"ssim\",\n",
+    "    metric=metric,\n",
     "    roi_weight=0.25,\n",
-    "    attn_layer=True,\n",
+    "    attn_layer=attn_layer,\n",
     ")\n",
     "\n",
     "pl.seed_everything(42)\n",
