fix SSIM to focus on only the ROI

--- a/model.ipynb
+++ b/model.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "path_config = pathlib.Path(\"fastmri_dirs.yaml\")\n",
     "\n",
-    "version_name = \"unet\" # one of \"unet\", \"unet_attn\", \"unet_ssim\", \"unet_attn_ssim\"\n",
+    "version_name = \"unet_ssim\" # one of \"unet\", \"unet_attn\", \"unet_ssim\", \"unet_attn_ssim\"\n",
     "\n",
     "if version_name == \"unet\":\n",
     "    attn_layer = False\n",
@@ -186,8 +186,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/lsantos/Projects/fastMRI/.venv/lib/python3.10/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:612: UserWarning: Checkpoint directory logs/unet/unet/checkpoints exists and is not empty.\n",
-      "  rank_zero_warn(f\"Checkpoint directory {dirpath} exists and is not empty.\")\n",
       "\n",
       "  | Name             | Type                 | Params\n",
       "----------------------------------------------------------\n",
@@ -198,6 +196,7 @@
       "4 | TotExamples      | DistributedMetricSum | 0     \n",
       "5 | TotSliceExamples | DistributedMetricSum | 0     \n",
       "6 | unet             | Unet                 | 7.8 M \n",
+      "7 | ssim             | SSIM                 | 0     \n",
       "----------------------------------------------------------\n",
       "7.8 M     Trainable params\n",
       "0         Non-trainable params\n",
@@ -208,7 +207,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7180f1445ba4414aa56aa79328600f27",
+       "model_id": "648c47d4a7f641e48b591fd15620a94e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -222,7 +221,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0293d50a3754451a34d00005eafc961",
+       "model_id": "f93f42968fb84df4b46e4ab688c47629",
        "version_major": 2,
        "version_minor": 0
       },
