Adding use_roi parameter. Now ROI can be used on l1 metric as well

--- a/model.ipynb
+++ b/model.ipynb
@@ -52,15 +52,23 @@
     "if version_name == \"unet\":\n",
     "    attn_layer = False\n",
     "    metric = \"l1\"\n",
+    "    use_roi = False\n",
+    "elif version_name == \"unet_roi\":\n",
+    "    attn_layer = True\n",
+    "    metric = \"l1\"\n",
+    "    use_roi = True\n",
     "elif version_name == \"unet_attn\":\n",
     "    attn_layer = True\n",
     "    metric = \"l1\"\n",
+    "    use_roi = True\n",
     "elif version_name == \"unet_ssim\":\n",
     "    attn_layer = False\n",
     "    metric = \"ssim\"\n",
+    "    use_roi = True\n",
     "elif version_name == \"unet_attn_ssim\":\n",
     "    attn_layer = True\n",
     "    metric = \"ssim\"\n",
+    "    use_roi = True\n",
     "\n",
     "configs = dict(\n",
     "    challenge=\"singlecoil\",\n",
@@ -88,6 +96,7 @@
     "    metric=metric,\n",
     "    roi_weight=0.25,\n",
     "    attn_layer=attn_layer,\n",
+    "    use_roi=use_roi,\n",
     ")\n",
     "\n",
     "pl.seed_everything(42)\n",
@@ -128,6 +137,7 @@
     "    metric=configs['metric'],\n",
     "    roi_weight=configs['roi_weight'],\n",
     "    attn_layer=configs['attn_layer'],\n",
+    "    use_roi=configs['use_roi'],\n",
     ")\n",
     "\n",
     "callbacks = [\n",
@@ -3705,7 +3715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
