Fixing model.ipynb

--- a/model.ipynb
+++ b/model.ipynb
@@ -47,14 +47,14 @@
    "source": [
     "path_config = pathlib.Path(\"fastmri_dirs.yaml\")\n",
     "\n",
-    "version_name = \"unet_ssim\" # one of \"unet\", \"unet_attn\", \"unet_ssim\", \"unet_attn_ssim\"\n",
+    "version_name = \"unet_roi\" # one of \"unet\", \"unet_attn\", \"unet_ssim\", \"unet_attn_ssim\"\n",
     "\n",
     "if version_name == \"unet\":\n",
     "    attn_layer = False\n",
     "    metric = \"l1\"\n",
     "    use_roi = False\n",
     "elif version_name == \"unet_roi\":\n",
-    "    attn_layer = True\n",
+    "    attn_layer = False\n",
     "    metric = \"l1\"\n",
     "    use_roi = True\n",
     "elif version_name == \"unet_attn\":\n",
@@ -191,58 +191,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  | Name             | Type                 | Params\n",
-      "----------------------------------------------------------\n",
-      "0 | NMSE             | DistributedMetricSum | 0     \n",
-      "1 | SSIM             | DistributedMetricSum | 0     \n",
-      "2 | PSNR             | DistributedMetricSum | 0     \n",
-      "3 | ValLoss          | DistributedMetricSum | 0     \n",
-      "4 | TotExamples      | DistributedMetricSum | 0     \n",
-      "5 | TotSliceExamples | DistributedMetricSum | 0     \n",
-      "6 | unet             | Unet                 | 7.8 M \n",
-      "7 | ssim             | SSIM                 | 0     \n",
-      "----------------------------------------------------------\n",
-      "7.8 M     Trainable params\n",
-      "0         Non-trainable params\n",
-      "7.8 M     Total params\n",
-      "31.024    Total estimated model params size (MB)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "648c47d4a7f641e48b591fd15620a94e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Sanity Checking: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f93f42968fb84df4b46e4ab688c47629",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Training: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainer.fit(model, datamodule=data_module)"
    ]
